# CADRE

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
notebooks/: Optimizer_Benchmark.ipynb
src/cadre/: __init__.py  _compat.py  _logging.py  active_set.py  minimize.py  solvers.py
tests/: test_active_set_convergence.py  test_active_set_solver.py
